:sparkles: add logs

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,9 @@ SMTP_MAX_CONNECTIONS=5
 SMTP_MAX_MESSAGES=100
 # Rechazar certificados no válidos (prod: true)
 SMTP_TLS_REJECT_UNAUTH=true
+
+# Logging
+# Directorio (relativo al proyecto o absoluto) donde se guardarán los logs JSONL
+LOG_DIR=./data/logs
+# Nombre del archivo de logs
+LOG_FILE_NAME=email.log
