:zap: new features templates crud

--- a/.env-example
+++ b/.env-example
@@ -28,3 +28,7 @@ SMTP_TLS_REJECT_UNAUTH=true
 LOG_DIR=./data/logs
 # Nombre del archivo de logs
 LOG_FILE_NAME=email.log
+
+# Templates
+# Directorio donde se almacenarán las plantillas (archivos .json)
+TEMPLATES_DIR=./data/templates
