--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "joi": "^17.13.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.14",
+    "handlebars": "^4.7.8",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   },
