--- a/.env-example
+++ b/.env-example
@@ -32,3 +32,19 @@ LOG_FILE_NAME=email.log
 # Templates
 # Directorio donde se almacenarán las plantillas (archivos .json)
 TEMPLATES_DIR=./data/templates
+
+# Base de Datos (opcional)
+# Para habilitar Postgres: DB_PROVIDER=postgres
+# Si falla la conexión o no está configurado, se hará fallback automático a filesystem
+DB_PROVIDER=filesystem
+
+# Opción 1: cadena de conexión completa (prioritaria si está definida)
+# PG_CONNECTION_STRING=postgresql://usuario:clave@localhost:5432/ms_smtp?sslmode=disable
+
+# Opción 2: parámetros discretos
+PG_HOST=localhost
+PG_PORT=5432
+PG_USER=postgres
+PG_PASSWORD=
+PG_DATABASE=ms_smtp
+PG_SSL=false
