:bug: doker ports

--- a/deploy/nginx.compose.conf
+++ b/deploy/nginx.compose.conf
@@ -11,7 +11,7 @@ http {
   keepalive_timeout 65;
 
   upstream ms_smtp_upstream {
-    server ms_smtp:3000; # nombre del servicio en docker-compose
+    server ms_smtp:3003; # nombre del servicio en docker-compose (alineado con PORT)
   }
 
   server {
