--- a/deploy/nginx.conf.example
+++ b/deploy/nginx.conf.example
@@ -16,7 +16,7 @@ http {
 
   # Upstream hacia la app Node (ajusta host/puerto)
   upstream ms_smtp_upstream {
-    server 127.0.0.1:3000; # o el nombre del servicio/host interno
+    server 127.0.0.1:3003; # PORT de la app en el host
   }
 
   server {
@@ -56,4 +56,38 @@ http {
       return 404;
     }
   }
+
+  # Bloque HTTPS (plantilla) - descomenta y configura certificados
+  # server {
+  #   listen 443 ssl http2;
+  #   server_name smtp.example.com; # cambia por tu dominio
+  #   ssl_certificate     /etc/letsencrypt/live/smtp.example.com/fullchain.pem;
+  #   ssl_certificate_key /etc/letsencrypt/live/smtp.example.com/privkey.pem;
+  #
+  #   location ^~ /docs/ {
+  #     proxy_pass http://ms_smtp_upstream;
+  #     proxy_http_version 1.1;
+  #     proxy_set_header Host $host;
+  #     proxy_set_header X-Real-IP $remote_addr;
+  #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  #     proxy_set_header X-Forwarded-Proto $scheme;
+  #   }
+  #
+  #   location /api/ {
+  #     proxy_pass http://ms_smtp_upstream;
+  #     proxy_http_version 1.1;
+  #     proxy_set_header Host $host;
+  #     proxy_set_header X-Real-IP $remote_addr;
+  #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  #     proxy_set_header X-Forwarded-Proto $scheme;
+  #   }
+  #
+  #   location = /health {
+  #     proxy_pass http://ms_smtp_upstream;
+  #   }
+  #
+  #   location / {
+  #     return 404;
+  #   }
+  # }
 }
