--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   db:
     image: postgres:16
@@ -57,5 +55,14 @@ services:
       db:
         condition: service_healthy
 
+  nginx:
+    image: nginx:1.25-alpine
+    container_name: ms-smtp-nginx
+    depends_on:
+      - ms_smtp
+    volumes:
+      - ./deploy/nginx.compose.conf:/etc/nginx/nginx.conf:ro
+
 volumes:
   pgdata:
+
