--- a/deploy/nginx.compose.conf
+++ b/deploy/nginx.compose.conf
@@ -10,40 +10,16 @@ http {
   sendfile      on;
   keepalive_timeout 65;
 
-  upstream ms_smtp_upstream {
-    server ms_smtp:3003; # nombre del servicio en docker-compose (alineado con PORT)
-  }
-
+  # Configuración mínima: no proxy, solo stub para que el contenedor arranque
   server {
     listen 80;
-    server_name _; # ajusta si deseas
+    server_name _;
 
-    # Swagger UI: evitar que otras reglas capturen /docs/*
-    location ^~ /docs/ {
-      proxy_pass http://ms_smtp_upstream;
-      proxy_http_version 1.1;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # API
-    location /api/ {
-      proxy_pass http://ms_smtp_upstream;
-      proxy_http_version 1.1;
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    # Health
     location = /health {
-      proxy_pass http://ms_smtp_upstream;
+      return 200 'ok';
+      add_header Content-Type text/plain;
     }
 
-    # 404 para cualquier otro recurso
     location / {
       return 404;
     }
