:sparkles: new config swagger docs

--- a/.env-example
+++ b/.env-example
@@ -23,9 +23,8 @@ SMTP_MAX_MESSAGES=100
 # Rechazar certificados no válidos (prod: true)
 SMTP_TLS_REJECT_UNAUTH=true
 
-# Swagger / Docs
-# Optional: change Swagger UI mount path (default: /docs)
-SWAGGER_PATH=/docs
+# API Documentation
+# No interactive documentation available
 
 # Logging
 # Directorio (relativo al proyecto o absoluto) donde se guardarán los logs JSONL
