:memo: add new env example

--- a/.env-example
+++ b/.env-example
@@ -23,8 +23,20 @@ SMTP_MAX_MESSAGES=100
 # Rechazar certificados no válidos (prod: true)
 SMTP_TLS_REJECT_UNAUTH=true
 
-# API Documentation
-# No interactive documentation available
+# API Documentation - Swagger Configuration
+# Protocolo para la documentación Swagger (http/https)
+SWAGGER_PROTOCOL=http
+# Host para la documentación Swagger
+SWAGGER_HOST=localhost
+# Puerto para la documentación Swagger (si es diferente al PORT principal)
+SWAGGER_PORT=3000
+# Ruta base adicional (ej: /api si está detrás de un proxy)
+SWAGGER_BASE_PATH=
+# Descripción del servidor principal
+SWAGGER_SERVER_DESCRIPTION=Development server
+# Servidor adicional opcional (ej: para staging o producción)
+SWAGGER_ADDITIONAL_SERVER_URL=
+SWAGGER_ADDITIONAL_SERVER_DESCRIPTION=
 
 # Logging
 # Directorio (relativo al proyecto o absoluto) donde se guardarán los logs JSONL
